@@ -40,3 +40,6 @@ permissions:
     silkspawners.freeitem:
         description: Allows you to get spawner items in your hand for free using /spawner [creature]
         default: false
+    silkspawners.freeitemegg:
+        description: Allows you to get spawn eggs in your hand for free using /spawner [creature]egg
+        default: false
