@@ -1,8 +1,10 @@
 X   1.0
     * Change default destroyDropEgg to false in config.yml
+    * Change command to /silkspawners, add /spawner and /ss aliases
     * Preserve comments in config.yml
     * Remove workaround for BUKKIT-602 since its fixed in 1.1-R4
-    * Change command to /silkspawners, add /spawner and /ss aliases
+    * Add /ss [creature]egg to get a free spawn egg item, as opposed to a spawner
+    * Add silkspawners.freeitemegg permission
     * Compile for CraftBukkit 1.1-R4
 
 2012-02-08  0.5
